@@ -8,6 +8,7 @@
     * Jump to the last post or page after QuickPosting
     * Label topics on the active messages list that have messages after your
       last post
+    * Improved Ricapar Classic CSS
 
 2008-09-21:
     * version 0.6.6
